--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,6 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-prelude": "../purescript-prelude#master"
+    "purescript-prelude": "https://github.com/purerl/purescript-prelude.git#master"
   }
 }
